--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/vulnerabilities/vulnerabilities.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/vulnerabilities/vulnerabilities.html
@@ -256,13 +256,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/vulnerability-detection/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/vulnerability-detection/index.html"
           >Vulnerability detection</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/vuln-detector.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/vuln-detector.html"
           >Vulnerability detector reference</md-list-item
         >
       </md-list>
